# Clear-rate

./: .env.example  .gitignore  README.md  docker-compose.yml  pnpm-lock.yaml
apps/backend/: Dockerfile  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/agent/: graph.py  state.py
apps/backend/app/agent/nodes/: execute_sql.py  generate_sql.py  map_procedure.py  parse_intent.py  synthesize_response.py
apps/backend/app/api/routes/: health.py  ingestion.py  prices.py  query.py
apps/backend/app/core/: config.py  logging.py
apps/backend/app/db/: connection.py  schema.py
apps/frontend/: Dockerfile  next.config.ts  package.json  tailwind.config.js
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/app/login/: page.tsx
apps/frontend/src/components/chat/: ChatInterface.tsx  MessageBubble.tsx
apps/frontend/src/components/layout/: Sidebar.tsx
apps/frontend/src/components/market-selector/: MarketSelector.tsx
apps/frontend/src/components/price-table/: PriceTable.tsx
apps/frontend/src/lib/: api.ts  constants.ts  types.ts  utils.ts
benchmark/: clearrate_bench_annotated.json  clearrate_bench_seed.json  run_benchmark.py
scripts/: dev-start.sh
