[project]
name = "healthcare-price-backend"
version = "0.1.0"
description = "Enterprise Healthcare Price Orchestration Platform — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # AI / Agent
    "anthropic>=0.30.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.1.20",
    "langchain-core>=0.2.0",

    # Database
    "duckdb>=1.0.0",

    # Data processing
    "polars>=1.0.0",
    "pyarrow>=16.0.0",

    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # HTTP client (for MRF downloads)
    "httpx>=0.27.0",

    # Observability
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
